Initial checkin for GermWar app